# RPA-Python

./: pyproject.toml
rpa_python/: rpa.py  rpa_ia.py  test_screenshot.py
tests/: test_rpa_python.py
