[tool.poetry]
name = "RPA_Python"
version = "0.1.0"
description = ""
authors = ["DaviSilvaP <davicmqj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyAutoGUI = "^0.9.52"
opencv-python = "^4.5.1"
numpy = "^1.19.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
